docs/apim/4.8/hybrid-installation-and-configuration-guides/classic-cloud/.zip.md
---
description: Install a Classic Cloud hybrid API Management 4.8 deployment from the .zip distribution. Follow the steps after installing the platform.
---

# .ZIP

{% hint style="warning" %}
This installation guide is for only development and quick start purposes. Do not use it for production environments. For more information about best practices for production environments, contact your Technical Account Manager.
{% endhint %}

1. Install Gravitee API Management (APIM). For more information about installing Gravitee APIM, see [Install with .ZIP](../../self-hosted-installation-guides/.zip.md).
2. Download, and then mount the Redis Repository. This repository is used for the rate limits' synchronized counters. To download this repository, go to [Gravitee.io Downloads](https://download.gravitee.io/#graviteeio-apim/plugins/repositories/gravitee-apim-repository-redis).
3. Download, and then mount the TCP Reporter. This repository is used to push events to Logstash. To download this repository, go to [Gravitee.io Downloads.](https://download.gravitee.io/#graviteeio-ee/apim/plugins/reporters/gravitee-reporter-tcp/)

## **Configure the connection between the SaaS Control-Plane and the Bridge Gateway**

{% code title="gravitee.yaml" lineNumbers="true" %}
```yaml
management:
  type: http
  http:
    url: https://bridge-gateway-url:bridge-gateway-port
    keepAlive: true
    idleTimeout: 30000
    connectTimeout: 10000
    authentication:
      type: basic
      basic:
        username: bridge-gateway-username
        password: bridge-gateway-password
      # ssl:
      #   ###beware: since 4.4 default is false (see upgrade guide) 
      #   trustall: true
      #   verifyHostname: true
      #   keystore:
      #     type: jks # Supports jks, pem, pkcs12
      #     path: ${gravitee.home}/security/keystore.jks
      #     password: secret
      #   truststore:
      #     type: jks # Supports jks, pem, pkcs12
      #     path: ${gravitee.home}/security/truststore.jks
      #     password: secret
```
{% endcode %}

## Configure Redis

Redis can be used by Gravitee for both caching and rate-limiting.

1. Install Redis. To install Redis, go to [redis.io](https://redis.io/docs/latest/get-started/).
2.  Configure Redis by copying the following file:\\

    \{% code title="gravitee.yaml" lineNumbers="true" %\}

    ```yaml
    ratelimit:
      type: redis
      redis:
        host: redis-host
        port: 6379
        password: redis-password
    ```

    \{% endcode %\}

## Configure Logstash

You can configure Logstash to send data to ElasticSearch.

{% hint style="info" %}
* For support versions, refer to the [compatibility matrix with Elasticsearch](https://www.elastic.co/support/matrix#matrix_compatibility).
* For more information about configuring Logstash, see [Creating a Logstash Pipeline](https://www.elastic.co/docs/reference/logstash/creating-logstash-pipeline) in the Elastic documentation.
{% endhint %}

1. Install Logstash. To install Logstash, go to [Download Logstash - OSS only](https://www.elastic.co/downloads/logstash-oss).
2.  Configure Logstash using the following `logstash.conf` file:\\

    \{% code title="logstash.conf" %\}

    ```json
    input {
      tcp {
          port => 8379
          codec => "json_lines"
      }
    }

    filter {
        if [type] != "request" or [type] != "v4-metrics" {
            mutate { remove_field => ["path", "host"] }
        }
    }

    output {
      s3 {
        access_key_id => "${S3_ACCESS_KEY_ID}"
        secret_access_key => "${S3_SECRET_ACCESS_KEY}"
        region => "${S3_REGION}"
        bucket => "${S3_BUCKET_NAME}"
        rotation_strategy => time
        time_file => 1
        codec => "json_lines"
      }
    }
    ```

    \{% endcode %\}
3.  In your `gravitee.yaml` file, configure the TCP reporter to push the analytics to Logstash using the following example:\\

    \{% code title="gravitee.yaml" lineNumbers="true" %\}

    ```yaml
    reporters:
      elasticsearch:
        enabled: false
      tcp:
        enabled: true
        host: logstash-host
        port: 8379
        output: elasticsearch
    ```

    \{% endcode %\}

## Configure Fluentd

Install Fluentd. To install Fluentd, go to [Download Fluentd](https://www.fluentd.org/download).

{% code title="fluentd.conf" lineNumbers="true" %}
```
<source>
  @type tcp
  tag tcp
  <parse>
    @type json
  </parse>
  port 9000
</source>

<match *.**>
  @type s3
  aws_key_id "xxxxxxxxxxxxxxx"
  aws_sec_key "xxxxxxxxxxxxxxx"
  s3_bucket "my-s3-bucket"
  s3_region "my-s3-region"
  
  path /
  time_slice_format %Y%m%d%H
  time_slice_wait 10m
  time_format %Y%m%d%H%M

  buffer_type file
  buffer_path /fluentd/log
  buffer_chunk_limit 256m
  buffer_queue_limit 512
  flush_interval 10s
  flush_at_shutdown true
  
  <format>
    @type json
  </format>
</match>
```
{% endcode %}

## Configure Alert Engine

{% code title="gravitee.yaml" lineNumbers="true" %}
```yaml
alerts:
  alert-engine:
    enabled: true
    ws:
      discovery: true
      endpoints:
        - https://alert-engine-url:alert-engine-port
      security:
        username: alert-engine-username
        password: alert-engine-password
```
{% endcode %}

## **An example of a Self-Hosted Gateway configuration**

{% code title="gravitee.yaml" lineNumbers="true" %}
```yaml
############################################################################################################
#################################### Gravitee.IO Gateway - Configuration ###################################
############################################################################################################

############################################################################################################
# This file is the general configuration of Gravitee.IO Gateway:
# - Properties (and respective default values) in comment are provided for information.
# - You can reference other property by using ${property.name} syntax
# - gravitee.home property is automatically set-up by launcher and refers to the installation path. Do not override it !
#
# Please have a look to http://docs.gravitee.io/ for more options and fine-grained granularity
############################################################################################################

organizations: cockpit-org-hrid
environments: cockpit-env-hrid
tags: your, sharding, tags #example: internal

plugins:
  path:
    - /opt/graviteeio-gateway/plugins
    - /opt/graviteeio-gateway/plugins-ext

management:
  type: http
  http:
    url: https://bridge-gateway-url:bridge-gateway-port
    authentication:
      basic:
        username: bridge-gateway-username
        password: bridge-gateway-password

ratelimit:
  # type: hazelcast
  type: redis
  redis:
    host: redis-host
    port: 6379
    password: redis-password

cache:
  type: ehcache

reporters:
  elasticsearch:
    enabled: false # Is the reporter enabled or not (default to true)
  tcp:
    enabled: true
    host: logstash-host
    port: logstash-port
    output: elasticsearch

services:
  core:
    http:
      enabled: true
      port: 18082
      host: localhost
      authentication:
        type: basic
        users:
          admin: internal-api-password

  sync:
    delay: 5000
    unit: MILLISECONDS
    distributed: false # By enabling this mode, data synchronization process is distributed over clustered API Gateways.
    bulk_items: 100 # Defines the number of items to retrieve during synchronization (events, plans, api keys, ...).

  local:
    enabled: false
    path: ${gravitee.home}/apis # The path to API descriptors

  monitoring:
    delay: 5000
    unit: MILLISECONDS
    distributed: false # By enabling this mode, data monitoring gathering process is distributed over clustered API Gateways.

  metrics:
    enabled: false
    prometheus:
      enabled: true

  tracing:
    enabled: false

api:
  properties:
    encryption:
      secret: your-own-api-32-characters-secret

alerts:
  alert-engine:
    enabled: true
    ws:
      discovery: true
      endpoints:
        - https://alert-engine-url:alert-engine-port
      security:
        username: alert-engine-username
        password: alert-engine-password

classloader:
  legacy:
    enabled: false
```
{% endcode %}
